--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Awesome project developed with TypeORM.",
   "type": "commonjs",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^16.11.10",
     "ts-node": "10.9.1",
     "typescript": "4.5.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.3",
     "nodemon": "^3.1.0",
     "pg": "^8.4.0",
